# pi-metronome

./: .gitignore  Makefile.in  README.md  configure.ac
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/debug/: AndroidManifest.xml
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/sastraxi/pi_metronome_client/: MainActivity.kt
flutter/ios/Runner/: AppDelegate.swift  Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/test/: widget_test.dart
server/: README.md  server.py  start.py
server/ble/: adapters.py  advertising.py  characteristic.py  constants.py  descriptor.py  exceptions.py  impls.py  service.py
server/service/: metronome.py
src/: Makefile.am  Makefile.in  bpm.c  cli-metronome.c  dr_wav.h  fft-test.c  light-test.c  program.c  stdin-metronome.c
src/light/: gpio.c  gpio.h
